--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -4,6 +4,61 @@
   place-items: center;
 }
 
+.anim-enter {
+  opacity: 0;
+  animation: enter-animation 1s forwards;
+}
+
+.anim-enter-blur {
+  opacity: 0;
+  filter: blur(10px);
+  animation: enter-animation-blur 1s forwards 1s cubic-bezier(.34,-0.01,.12,1.01);
+}
+
+@keyframes enter-animation-blur {
+  to {
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+
+@keyframes enter-animation {
+  to {
+    opacity: 1;
+  }
+}
+
+.anim-enter-width {
+
+  width: 1rem;
+  animation: enter-animation-width 1s cubic-bezier(.34,-0.01,.12,1.01) 1s forwards;
+}
+
+@keyframes enter-animation-width {
+  to {
+    width: 40rem;
+  }
+}
+
+
+.animated-background {
+  background-size: 400%;
+
+  -webkit-animation: animation 2s ease infinite;
+  -moz-animation: animation 2s ease infinite;
+  animation: animation 2s ease infinite;
+}
+
+@keyframes animation {
+  0%,
+  100% {
+      background-position: 0% 50%;
+  }
+  
+  50% {
+      background-position: 100% 50%;
+  }
+}
 
 
 @keyframes scroll-left {
